argocd/apps/tinyx/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-hello-world
  namespace: tinyx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx
  template:
    metadata:
      labels:
        app: tinyx
    spec:
      containers:
      - name: hello-world
        image: nginxdemos/hello:latest
        ports:
        - containerPort: 80
