argocd/apps/tinyx/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinyx-service
  namespace: tinyx
spec:
  selector:
    app: tinyx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
