argocd/apps/tinyx/deploy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinyx-ingress
  namespace: tinyx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tinyx.epita.beutra.fr
      secretName: longhorn-tls
  rules:
    - host: tinyx.epita.beutra.fr
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tinyx-service
                port:
                  number: 80
